# geminiai-cli

./: .autoheader_cache  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  backblaze_b2_integration.md  dummy_test_file.txt  pyproject.toml  run_merge_test.py  setup_test_state.py  test_cooldown_upload.py  verify_test_state.py
.github/workflows/: publish.yml
src/geminiai_cli/: args.py  b2.py  backup.py  chat.py  check_b2.py  cleanup.py  cli.py  command_helpers.py  commands.py  commands.txt  config.py  cooldown.py  doctor.py  history.py  integrity.py  list_backups.py  login.py  logout.py  prune.py  reset_helpers.py  restore.py  session.py  settings.json  settings.py  settings_cli.py  stats.py  sync.py  ui.py  update.py  utils.py
tests/: conftest.py  test_auto_restore.py  test_b2.py  test_backup.py  test_chat.py  test_check_b2.py  test_cleanup.py  test_cli.py  test_commands.py  test_cooldown.py  test_credentials.py  test_doctor.py  test_history.py  test_integrity.py  test_list_backups.py  test_logout.py  test_prune.py  test_recommend.py  test_reset_helpers.py  test_restore.py  test_session.py  test_settings.py  test_settings_cli.py  test_sync.py  test_ui.py  test_update.py  test_utils.py
