[project]
name = "geminiai-cli"
version = "4.0.0"
description = "Gemini AI CLI Tool for automation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "b2sdk>=1.18.0",
    "rich>=10.0.0"
]

[project.scripts]
geminiai = "geminiai_cli.cli:main"
alice = "geminiai_cli.cli:main"
ga = "geminiai_cli.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Make pytest aware of src/ layout
pythonpath = [
    "src",
]

# Where tests live
testpaths = [
    "tests",
]

# Async support (you use anyio + asyncio)
asyncio_mode = "strict"

# Optional markers (expand later if needed)
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

# Warnings
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Recommended pytest options
addopts = [
    "-v",
    "-ra",
    "--tb=short",
    "--showlocals",
    "--timeout=10",
    "--durations=10",
    "--import-mode=importlib",
    "--cov=src/geminiai_cli",
    "--cov-fail-under=97",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]

# Coverage config
[tool.coverage.run]
branch = true
source = [
    "src/geminiai_cli",
]

[tool.coverage.report]
fail_under = 97
show_missing = true
skip_covered = true